--- a/src/APGLogs.Services.Api/appsettings.json
+++ b/src/APGLogs.Services.Api/appsettings.json
@@ -1,7 +1,16 @@
 {
   "APGLogDatabaseSettings": {
     "ExceptionLogCollectionName": "ExceptionLogCollection",
+    "ExceptionLogTypeCollectionName": "ExceptionLogTypeCollection",
     "CommunicationLogCollectionName": "CommunicationLogCollection",
+    "SMSLogCollectionName": "SMSLogCollection",
+    "EmailLogCollectionName": "EmailLogCollection",
+    "AMSBalanceAuditCollectionName": "AMSBalanceAuditLogCollection",
+    "ShadowBalanceAuditCollectionName": "ShadowBalanceAuditLogCollection",
+    "AMSTransactionAuditCollectionName": "AMSTransactionAuditCollection",
+    "PortalSessionAuditCollectionName": "PortalSessionAuditCollection",
+    "PortalSessionAuditActionCollectionName": "PortalSessionAuditActionCollection",
+    "CommunicationLogTypeCollectionName": "CommunicationLogTypeCollection",
     "BalanceAndAMSAuditsCollectionName": "BalanceAndAMSAuditsCollection",
     "PortalAuditsCollectionCollectionName": "PortalAuditsCollectionCollectionName",
     "ConnectionString": "mongodb://localhost:27017",
