--- a/src/APGLogs.Services.Api/appsettings.json
+++ b/src/APGLogs.Services.Api/appsettings.json
@@ -16,6 +16,19 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "APGLogDB"
   },
+  "BackgroundClearTaskSettings": {
+    "TaskPerformedEveryDays": "1",
+    "NumberOfIntervalDaysToClearExceptionLog": "30",
+    "NumberOfIntervalDaysToClearCommunicationLog": "30",
+    "NumberOfIntervalDaysToClearPortalSessionAudit": "30",
+    "NumberOfIntervalDaysToClearPortalSessionAuditAction": "30",
+    "NumberOfIntervalDaysToClearAMSTransactionAudit": "30",
+    "NumberOfIntervalDaysToClearAMSBalanceAudit": "30",
+    "NumberOfIntervalDaysToClearShadowBalanceAudit": "30",
+    "NumberOfIntervalDaysToClearSMSLog": "30",
+    "NumberOfIntervalDaysToClearEmailLog": "30",
+    "UseBase64Encoding": false
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
